# gmm_gmr

./: CMakeLists.txt  brainstorming.txt  gmm_notes.txt
include/: DTW.hpp  DemonsEntry.cpp  doRegression.h
include/gaussian_mixture_model/: gmm.h  gmm_node.hpp  gmr.h
src/: data_acq.cpp  demons_DTW.cpp  dtw_test.cpp  gmm.cpp  gmm_node.cpp  gmm_node.h  gmm_rviz_converter.cpp  gmm_rviz_converter.h  gmr.cpp  trajectory_converter.cpp  trajectory_converter.h
srv/: DoRegression.srv
